generator client {
  provider        = "prisma-client-js"
  previewFeatures = ["omitApi"]
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// ENUMS
enum MaritalStatus {
  single
  relationship
}

enum SubscriptionPlan {
  free
  premium
}

enum Gender {
  man
  woman
  other
}

enum Frequency {
  regularly
  socially
  never
}

enum JobStatus {
  permanent
  fixedTerm
  student
  selfEmployed
  unemployed
}

enum Diet {
  vegetarian
  vegan
  flexitarian
  omnivore
  carnivore
}

enum DayMoment {
  day
  evening
  night
  weekend
}

enum HistoryStatus {
  new
  experienced
}

enum Language {
  french
  english
  german
  italian
  spanish
  portuguese
  russian
  polish
  indian
  chinese
  japanese
  arabic
  algerian
}

enum NotificationType {
  email
  push
  both
}

// NOTIFICATIONS
model Notification {
  id        Int              @id @default(autoincrement())
  userUid   String?
  type      NotificationType
  // email
  template  String?
  subject   String?
  data      String?
  // push
  title     String?
  caption   String?
  link      String?
  thumbnail String?

  emittedAt DateTime  @default(now())
  readAt    DateTime?

  user User? @relation(fields: [userUid], references: [uid], onDelete: SetNull)

  @@map("notifications")
}

// MODELS
model User {
  uid              String           @id @default(uuid())
  email            String           @unique
  password         String
  verified         Boolean          @default(false)
  subscriptionPlan SubscriptionPlan @default(free)
  createdAt        DateTime         @default(now())
  updatedAt        DateTime         @updatedAt

  data                       UserInfo?
  preferences                UserPreference?
  verificationCodes          VerificationCode[]
  authSessions               AuthSession[]
  rentalProfile              RentalProfile?
  notifications              Notification[]
  flatSharingInvitations     FlatSharingInvitation[]
  flatSharingSentInvitations FlatSharingInvitation[] @relation(name: "flatSharingSendInvitations")
  flatSharingMember          FlatSharingMember?

  @@map("users")
}

model UserInfo {
  userUid   String    @id
  firstName String
  lastName  String
  avatarUrl String?
  birthdate DateTime?
  gender    Gender?
  updatedAt DateTime  @updatedAt

  user User @relation(fields: [userUid], references: [uid], onDelete: Cascade)

  @@map("userInfo")
}

model UserPreference {
  userUid                String   @id
  openToFriendRequests   Boolean  @default(true)
  promotionEmails        Boolean  @default(false)
  newMessageEmails       Boolean  @default(false)
  newFriendRequestEmails Boolean  @default(true)
  updatedAt              DateTime @updatedAt

  user User @relation(fields: [userUid], references: [uid], onDelete: Cascade)

  @@map("userPreferences")
}

model VerificationCode {
  id        Int       @id @default(autoincrement())
  userUid   String
  code      String
  createdAt DateTime  @default(now())
  expiresAt DateTime
  usedAt    DateTime?

  user User @relation(fields: [userUid], references: [uid], onDelete: Cascade)

  @@unique([userUid, code])
  @@map("verificationCodes")
}

// AUTH
model AuthSession {
  token     String   @default(uuid())
  userUid   String
  revoked   Boolean  @default(false)
  issuedAt  DateTime @default(now())
  expiresAt DateTime

  user User @relation(fields: [userUid], references: [uid], onDelete: Cascade)

  @@id([token, userUid])
  @@map("authSessions")
}

// RENTAL PROFILE
model RentalProfile {
  userUid       String        @id
  animals       Boolean
  smoker        Frequency
  drinker       Frequency
  maritalStatus MaritalStatus
  jobStatus     JobStatus
  monthlyIncome Decimal
  diet          Diet
  availability  DayMoment
  driverLicense Boolean
  car           Boolean
  motorcycle    Boolean
  rentHistory   HistoryStatus
  languages     Language[]
  createdAt     DateTime      @default(now())
  updatedAt     DateTime      @updatedAt

  user User @relation(fields: [userUid], references: [uid], onDelete: Cascade)

  @@map("rentalProfiles")
}

// FLAT SHARING
model PostalAddress {
  id         Int     @id @default(autoincrement())
  street     String
  additional String?
  zipCode    String
  city       String
  country    String

  flatSharings FlatSharing[]

  @@unique([street, additional, zipCode, city, country])
  @@map("postalAddresses")
}

model FlatSharing {
  uid       String   @id @default(uuid())
  name      String
  addressId Int
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  address     PostalAddress           @relation(fields: [addressId], references: [id])
  members     FlatSharingMember[]
  invitations FlatSharingInvitation[]

  @@map("flatSharings")
}

model FlatSharingInvitation {
  userUid        String
  flatSharingUid String
  sourceUid      String?
  emittedAt      DateTime @default(now())
  expiresAt      DateTime

  user        User        @relation(fields: [userUid], references: [uid], onDelete: Cascade)
  source      User?       @relation(name: "flatSharingSendInvitations", fields: [sourceUid], references: [uid], onDelete: SetNull)
  flatSharing FlatSharing @relation(fields: [flatSharingUid], references: [uid], onDelete: Cascade)

  @@id([userUid, flatSharingUid])
  @@map("flatSharingInvitations")
}

model FlatSharingMember {
  userUid        String   @unique
  flatSharingUid String
  joinedAt       DateTime @default(now())

  user        User        @relation(fields: [userUid], references: [uid], onDelete: Cascade)
  flatSharing FlatSharing @relation(fields: [flatSharingUid], references: [uid], onDelete: Cascade)

  @@id([userUid, flatSharingUid])
  @@map("flatSharingMembers")
}
